De-flake animation id tests. Add Animation::ToString(RunState).

Bug: 771620
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I2dc798906f16528b4e56b9f7c6bb7869327afb54
Reviewed-on: https://chromium-review.googlesource.com/700734
Reviewed-by: danakj <danakj@chromium.org>
Reviewed-by: Robert Flack <flackr@chromium.org>
Reviewed-by: Stephen McGruer <smcgruer@chromium.org>
Commit-Queue: Walter Korman <wkorman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506507}
Former-commit-id: b00e05518d601322ecdbe95f4afe70d386eedfe8