ui/compositor/layer_animation_element_unittest.cc
@@ -7,6 +7,7 @@
 #include <memory>
 
 #include "base/compiler_specific.h"
+#include "base/strings/stringprintf.h"
 #include "base/time/time.h"
 #include "testing/gtest/include/gtest/gtest.h"
 #include "ui/compositor/layer_animation_delegate.h"
@@ -428,11 +429,12 @@ TEST(LayerAnimationElementTest, ToString) {
   std::unique_ptr<LayerAnimationElement> element =
       LayerAnimationElement::CreateOpacityElement(target, delta);
   element->set_animation_group_id(42);
-  // TODO(wkorman): Test varying last_progressed_fraction and
-  // start_frame_number.
+  // TODO(wkorman): Test varying last_progressed_fraction.
   EXPECT_EQ(
-      "LayerAnimationElement{name=ThreadedOpacityTransition, id=1, group=42, "
-      "last_progressed_fraction=0.00, start_frame_number=0}",
+      base::StringPrintf("LayerAnimationElement{name=ThreadedOpacityTransition,"
+                         " id=%d, group=42, "
+                         "last_progressed_fraction=0.00}",
+                         element->animation_id()),
       element->ToString());
 }
 
